# vizgen-postprocessing

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: cicd.yml  main.yml
_sources/: index.rst.txt
_sources/analysis_vignettes/: index.rst.txt  segmentation_of_a_local_dataset.rst.txt
_sources/experimental_features/: index.rst.txt  plugin_architecture.rst.txt
_sources/output_data_formats/: entity_by_gene_matrix_format.rst.txt  geometry_file_format.rst.txt
_sources/segmentation_options/: index.rst.txt  segmentation_task_definition.rst.txt  task_fusion_definition.rst.txt
analysis_vignettes/: index.html  segmentation_heart_dataset_cellpose2.html  segmentation_of_a_local_dataset.html
command_line_interface/: index.html
docs/source/: conf.py  index.rst  installation.rst
docs/source/analysis_vignettes/: segmentation_heart_dataset_cellpose2.rst
docs/source/command_line_interface/: index.rst
docs/source/experimental_features/: multiple_entities.rst
docs/source/output_data_formats/: biological_entities_and_segmentation.rst  detected_transcripts_format.rst  entity_metadata_format.rst  index.rst  vzg_file_format.rst
docs/source/segmentation_options/: cellpose_segment.rst  json_file_format.rst  overview.rst  segmentation_task_definition.rst  watershed_segment.rst
example_analysis_algorithm/: cellpose_default_1_ZLevel.json  cellpose_default_3_ZLevel.json  cellpose_default_3_ZLevel_nuclei_only.json  watershed_default.json
experimental_features/: index.html  multiple_entities.html  plugin_architecture.html
nextflow_pipeline/: main.nf  nextflow.config
output_data_formats/: biological_entities_and_segmentation.html  detected_transcripts_format.html  entity_by_gene_matrix_format.html  entity_metadata_format.html  geometry_file_format.html  index.html  vzg_file_format.html
segmentation_options/: cellpose_segment.html  index.html  json_file_format.html  overview.html  segmentation_task_definition.html  task_fusion_definition.html  watershed_segment.html
src/vpt/: __init__.py  cmd_args.py  log.py  profiler.py  vizgen_postprocess.py
src/vpt/app/: __init__.py  context.py  empty.py  task.py
src/vpt/compile_tile_segmentation/: __init__.py  cmd_args.py  main.py  parameters.py
src/vpt/convert_geometry/: __init__.py  cmd_args.py  factory.py  main.py
src/vpt/convert_to_ome/: __init__.py  cmd_args.py  main.py  main_rgb.py  rgb_cmd_args.py  tiffutils.py
src/vpt/derive_cell_metadata/: __init__.py  __main__.py  cell_metadata.py  cmd_args.py  run_derive_cell_metadata.py
src/vpt/entity/: __init__.py  empty_resolver.py  factory.py  relationships.py  resolver_base.py  segmentation_results_worker.py
src/vpt/extract_image_patch/: __init__.py  cmd_args.py  main.py
src/vpt/filesystem/: __init__.py  vzgfs.py
src/vpt/generate_segmentation_metrics/: __init__.py  cluster_data.py  cmd_args.py  compute_metrics.py  distributions.py  distributions_utils.py  main.py  metrics_settings.py  output_tools.py
src/vpt/partition_transcripts/: __init__.py  __main__.py  cell_x_gene.py  cmd_args.py  run_partition_transcripts.py
src/vpt/prepare_segmentation/: __init__.py  cmd_args.py  constants.py  input_tools.py  main.py  output_tools.py  tiles.py  validate.py
src/vpt/run_segmentation/: __init__.py  cmd_args.py  main.py
src/vpt/run_segmentation_on_tile/: __init__.py  __main__.py  cmd_args.py  image.py  input_utils.py  main.py  output_utils.py
src/vpt/segmentation/: entity.py  factory.py  segmentations_factory.py  types.py
src/vpt/sum_signals/: __init__.py  cmd_args.py  main.py  validate.py
src/vpt/update_vzg/: __init__.py  __main__.py  byte_utils.py  cell_metadata.py  cmd_args.py  imageparams.py  manifestgen.py  polygon_transfer.py  run_update_vzg.py
src/vpt/utils/: boundaries.py  cellsreader.py  general_data.py  input_utils.py  metadata.py  raw_cell.py  (+6 more)
tests/: __init__.py  base_case.py  segmentation_utils.py  temp_dir.py  test_algo_spec_generator.py  test_context.py  test_convert_geometry.py  test_convert_rgb_ome.py  test_convert_to_ome.py  test_fusion.py  test_gen_cell_metadata.py  test_image_preprocess.py  test_image_set.py  test_make_non_overlapping_polys.py  test_micron_to_mosaic.py  test_partition_barcodes.py  test_regex_tools.py  test_save_geodataframe.py  test_seg_result.py  test_tiles.py  test_update_vzg.py  test_watershed.py  utils.py
tests/compile_tile_segmentation/: test_compile_dataframe.py  test_compile_tile_segmentation.py
tests/data/: cell_metadata.csv  cellpose_1.json  cellpose_2.json  cells_cellpose.parquet  cvt_1_geo_result.parquet  cvt_2_geo_result.parquet  cvt_3_geo_result.parquet  detected_transcripts.csv  detected_transcripts_unordered_z.csv  fake_vzg.vzg  micron_to_mosaic_pixel_transform.csv  output_cell_metadata.csv  segmentation_algorithm.json  test_convert_seg_segmentatiof.geojson  test_convert_seg_segmentation.geojson  test_convert_seg_segmentation.hdf5  watershed_only_nucl.json
tests/integration/: test_pipeline_steps.py  test_pipeline_with_templates.py
tests/integration_cloud/: __init__.py  test_derive_cell_metadata.py  test_ome_cloud.py  test_partition_barcodes.py  test_run_segmentation.py  test_sum_signals.py  test_update_vzg.py
tests/sum_signals/: test_get_cell_brightness_in_image.py  test_sum_signals.py
tests/vpt/: __init__.py  temp_dir.py  test_algo_spec_generator.py  test_compile_dataframe.py  test_compile_tile_segmentation.py  test_context.py  test_convert_geometry.py  test_convert_rgb_ome.py  test_convert_to_ome.py  test_entity_type_rel_spec.py  test_extract_image_patch.py  test_gen_cell_metadata.py  test_generate_segmentation_metrics.py  test_get_cell_brightness_in_image.py  test_micron_to_mosaic.py  test_partition_barcodes.py  test_plugin_base.py  test_prepare_seg.py  test_profiler.py  test_resolve.py  test_resolve_constraints.py  test_seg_result.py  test_sum_signals.py  test_tiles.py  test_update_vzg.py  test_validate.py
(+121 files in other folders)
