[tool.poetry]
name = "vpt"
version = "1.1.2"
description = "Command line tool for highly parallelized processing of Vizgen data"
license = "Apache-2.0"
authors = ["Vizgen <techsupport@vizgen.com>"]
maintainers = ["Timothy Wiggin <timothy.wiggin@vizgen.com>"]
readme = "README.md"
# homepage = ""
repository = "https://github.com/Vizgen/vizgen-postprocessing"
documentation = "https://vizgen.github.io/vizgen-postprocessing/"
# keywords = ""
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "vpt", from = "src" }]
include = ["src/vpt/utils/seg_json_generator/templates/*"]

[tool.poetry.scripts]
vpt = "vpt.vizgen_postprocess:entry_point"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
boto3 = "1.17"
dask = ">=2023.2.0"
distributed = ">=2023.2.0"
fsspec = "2021.10.0"
geopandas = ">=0.13.2"
gcsfs = "2021.10.0"
h5py = ">=3.7.0"
ipykernel = "*"
kaleido = [
    { version = "0.1post1", platform = "win32" },
    { version = "0.1.0", platform = "linux" },
    { version = "0.1.0", platform = "darwin" },
]
leidenalg = "^0.10.1"
numpy = ">=1.24.3"
pandas = ">=2.0.3"
plotly = "^5.17.0"
pretty-html-table = "^0.9.16"
pyarrow = ">=8.0.0 <14.0.0"
python-dotenv = ">=0.20.0"
pyvips = ">=2.2.1"
rasterio = ">=1.3.0, <1.3.6"
s3fs = "2021.10.0"
scanpy = "1.9.3"
scipy = ">=1.8.1"
shapely = ">=2.0.0"
torch = "2.0.0"
vpt_core = ">=1.1.0"
vpt_plugin_cellpose = { version = ">=1.0.0", optional = true }
vpt_plugin_watershed = { version = ">=1.0.0", optional = true }

[tool.poetry.extras]
cellpose = ["vpt_plugin_cellpose"]
watershed = ["vpt_plugin_watershed"]
all = ["vpt_plugin_cellpose", "vpt_plugin_watershed"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
opencv-python-headless = "4.6.0.66"

[tool.poetry.group.deploy.dependencies]
python-semantic-release = "^7.32.2"
sphinx-argparse = "^0.4.0"
sphinx-view = "^0.3.1"
myst-nb = { version = "^0.17.1", python = "^3.9" }
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.1.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
branch = "develop"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
